@@ -391,7 +391,7 @@ public class JSONWriter {
      * @throws JSONException If the number is not finite.
      */
     public JSONWriter value(double d) throws JSONException {
-        return this.value(new Double(d));
+	return this.value(Double.valueOf(d));
     }
 
     /**
